--- a/MFCApplication1/MFCApplication1.vcxproj.filters
+++ b/MFCApplication1/MFCApplication1.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MFCTest.h">
+    <ClInclude Include="MFCApplication1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MFCTestDlg.h">
+    <ClInclude Include="MFCApplication1Dlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
@@ -32,10 +32,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MFCTest.cpp">
+    <ClCompile Include="MFCApplication1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MFCTestDlg.cpp">
+    <ClCompile Include="MFCApplication1Dlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
@@ -43,17 +43,17 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="MFCTest.rc">
+    <ResourceCompile Include="MFCApplication1.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\MFCTest.rc2">
+    <None Include="res\MFCApplication1.rc2">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="res\MFCTest.ico">
+    <Image Include="res\MFCApplication1.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
