--- a/SelfInterior/SelfInterior.vcxproj.filters
+++ b/SelfInterior/SelfInterior.vcxproj.filters
@@ -102,6 +102,24 @@
     <Image Include="res\Toolbar256.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmap1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\icon_door.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\icon_refri.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\icon_television.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\icon_window.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\bitmap2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\SelfInterior.rc2">
