--- a/SelfInterior/SelfInterior.vcxproj
+++ b/SelfInterior/SelfInterior.vcxproj
@@ -38,7 +38,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -183,6 +183,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CShapeViewCtrl.h" />
+    <ClInclude Include="CShapeViewPane.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="DInterior.h" />
     <ClInclude Include="DShape.h" />
@@ -197,6 +199,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CShapeViewCtrl.cpp" />
+    <ClCompile Include="CShapeViewPane.cpp" />
     <ClCompile Include="DInterior.cpp" />
     <ClCompile Include="DShape.cpp" />
     <ClCompile Include="DSpace.cpp" />
