문/창문 도면이미지bmp 추가

--- a/SelfInterior/SelfInterior.vcxproj
+++ b/SelfInterior/SelfInterior.vcxproj
@@ -224,6 +224,8 @@
     <Image Include="res\icon_refri.bmp" />
     <Image Include="res\icon_television.bmp" />
     <Image Include="res\icon_window.bmp" />
+    <Image Include="res\img_door.bmp" />
+    <Image Include="res\img_window.bmp" />
     <Image Include="res\SelfInterior.ico" />
     <Image Include="res\SelfInteriorDoc.ico" />
     <Image Include="res\Toolbar.bmp" />
