--- a/SelfInterior/SelfInterior.vcxproj.filters
+++ b/SelfInterior/SelfInterior.vcxproj.filters
@@ -132,6 +132,12 @@
     <Image Include="res\img_window.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\icon_house.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\icon_room.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\SelfInterior.rc2">
