--- a/SelfInterior/SelfInterior.vcxproj
+++ b/SelfInterior/SelfInterior.vcxproj
@@ -188,8 +188,8 @@
     <ClInclude Include="define.h" />
     <ClInclude Include="DInterior.h" />
     <ClInclude Include="DShape.h" />
-    <ClInclude Include="DSpace.h" />
     <ClInclude Include="DStructure.h" />
+    <ClInclude Include="DWall.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SelfInterior.h" />
@@ -203,8 +203,8 @@
     <ClCompile Include="CShapeViewPane.cpp" />
     <ClCompile Include="DInterior.cpp" />
     <ClCompile Include="DShape.cpp" />
-    <ClCompile Include="DSpace.cpp" />
     <ClCompile Include="DStructure.cpp" />
+    <ClCompile Include="DWall.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="SelfInterior.cpp" />
     <ClCompile Include="SelfInteriorDoc.cpp" />
