--- a/SelfInterior/SelfInterior.vcxproj.filters
+++ b/SelfInterior/SelfInterior.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="DWall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CHelpDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SelfInterior.cpp">
@@ -90,6 +93,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CShapeViewPane.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CSettingDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DWall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CHelpDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
